--- a/research/training.ipynb
+++ b/research/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "a846b34e",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "1fbedce3",
    "metadata": {},
    "outputs": [],
@@ -1376,21 +1376,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "graph",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
